--- a/.github/workflows/ca_handler_tests_certifier.yml
+++ b/.github/workflows/ca_handler_tests_certifier.yml
@@ -859,7 +859,8 @@ jobs:
         sudo echo "api_password: $NCM_API_PASSWORD" >> data/acme_srv.cfg
         sudo echo "ca_name: $NCM_CA_NAME" >> data/acme_srv.cfg
         sudo echo "ca_bundle: $NCM_CA_BUNDLE" >> data/acme_srv.cfg
-        sudo echo "profile_id: 102" >> data/acme_srv.cfg
+        sudo echo "profile_id: 100" >> data/acme_srv.cfg
+        sudo echo "eab_profiling: True" >> data/acme_srv.cfg
         sudo sed -i "s/tnauthlist_support: False/tnauthlist_support: False\nheader_info_list: [\"HTTP_USER_AGENT\"]/g" data/acme_srv.cfg
         sudo echo -e "\n\n[EABhandler]" >> data/acme_srv.cfg
         sudo echo "eab_handler_file: /opt/acme2certifier/examples/eab_handler/kid_profile_handler.py" >> data/acme_srv.cfg
