--- a/.github/workflows/test_headerinfo.yml
+++ b/.github/workflows/test_headerinfo.yml
@@ -317,10 +317,17 @@ jobs:
         mkdir -p data/volume/acme_ca/certs
         sudo cp test/ca/acme2certifier-clean.xdb data/volume/acme_ca/$XCA_DB_NAME
         sudo cp test/ca/sub-ca-key.pem test/ca/sub-ca-crl.pem test/ca/sub-ca-cert.pem test/ca/root-ca-cert.pem data/volume/acme_ca/
+
+        sudo cp examples/ca_handler/xca_ca_handler.py data/volume/ca_handler.py
+        sudo chmod 777 data/volume/ca_handler.py
+        sudo sed -i "s/error = self._profile_check(csr)/qset = header_info_get(self.logger, csr=csr)\n            if qset:\n                self.logger.info('header_info: %s', qset[-1]['header_info'])/g" data/volume/ca_handler.py
+        sudo sed -i "s/header_info_field_validate, config_headerinfo_get, config_eab_profile_load/header_info_get, header_info_field_validate, config_headerinfo_get, config_eab_profile_load/g" data/volume/ca_handler.py
+
+
         sudo touch data/volume/acme_srv.cfg
         sudo chmod 777 data/volume/acme_srv.cfg
         sudo head -n -8 .github/openssl_ca_handler.py_acme_srv_default_handler.cfg > data/volume/acme_srv.cfg
-        sudo echo "handler_file: /opt/acme2certifier/examples/ca_handler/xca_ca_handler.py" >> data/volume/acme_srv.cfg
+        sudo echo "handler_file: /opt/acme2certifier/volume/ca_ca_handler.py" >> data/volume/acme_srv.cfg
         sudo echo "xdb_file: volume/acme_ca/$XCA_DB_NAME" >> data/volume/acme_srv.cfg
         sudo echo "issuing_ca_name: $XCA_ISSUING_CA" >> data/volume/acme_srv.cfg
         sudo echo "passphrase: $XCA_PASSPHRASE" >> data/volume/acme_srv.cfg
