--- a/.github/workflows/test_headerinfo.yml
+++ b/.github/workflows/test_headerinfo.yml
@@ -178,10 +178,10 @@ jobs:
         sudo mkdir -p examples/Docker/data/acme_ca/certs
         sudo cp test/ca/sub-ca-key.pem test/ca/sub-ca-crl.pem test/ca/sub-ca-cert.pem test/ca/root-ca-cert.pem data/acme_ca/
 
-        sudo cp examples/ca_handler/xca_ca_handler.py data/volume/acme_ca/ca_handler.py
-        sudo chmod 777 data/volume/acme_ca/ca_handler.py
-        sudo sed -i "s/error = self._profile_check(csr)/qset = header_info_get(self.logger, csr=csr)\n            if qset:\n                self.logger.info('header_info: %s', qset[-1]['header_info'])/g" data/volume/acme_ca/ca_handler.py
-        sudo sed -i "s/header_info_field_validate, config_headerinfo_get, config_eab_profile_load/header_info_get, header_info_field_validate, config_headerinfo_get, config_eab_profile_load/g" data/volume/acme_ca/ca_handler.py
+        sudo cp examples/ca_handler/xca_ca_handler.py data/acme_ca/ca_handler.py
+        sudo chmod 777 data/acme_ca/ca_handler.py
+        sudo sed -i "s/error = self._profile_check(csr)/qset = header_info_get(self.logger, csr=csr)\n            if qset:\n                self.logger.info('header_info: %s', qset[-1]['header_info'])/g" data/acme_ca/ca_handler.py
+        sudo sed -i "s/header_info_field_validate, config_headerinfo_get, config_eab_profile_load/header_info_get, header_info_field_validate, config_headerinfo_get, config_eab_profile_load/g" data/acme_ca/ca_handler.py
 
         sudo touch data/acme_srv.cfg
         sudo chmod 777 data/acme_srv.cfg
