--- a/.github/workflows/ca_handler_tests_asa.yml
+++ b/.github/workflows/ca_handler_tests_asa.yml
@@ -35,9 +35,9 @@ jobs:
         sed -i "s/wsgi/$DB_HANDLER/g" .env
         sed -i "s/apache2/$WEB_SRV/g" .env
         cat .env
-        #docker network create acme
-        #docker-compose up -d
-        #docker-compose logs
+        docker network create acme
+        docker-compose up -d
+        docker-compose logs
       env:
         WEB_SRV: ${{ matrix.websrv }}
         DB_HANDLER: ${{ matrix.dbhandler }}
